--- a/CPGs.ipynb
+++ b/CPGs.ipynb
@@ -190,8 +190,6 @@
     "\n",
     "plt.plot(time, n1)\n",
     "plt.plot(time, n2)\n",
-    "\n",
-    "plt.ylabel('some numbers')\n",
     "plt.show()"
    ]
   },
@@ -210,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +226,7 @@
    ],
    "source": [
     "import math\n",
-    "from math import pi, sin\n",
+    "from math import pi, sin, floor\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -246,7 +244,7 @@
     "\n",
     "def tranop(x):\n",
     "    if x > pi:\n",
-    "        if (math.floor(x/pi) % 2 == 1):\n",
+    "        if (floor(x/pi) % 2 == 1):\n",
     "            t = (x % (2*pi)) - 2*pi\n",
     "        else:\n",
     "            t = (x % (2*pi))\n",
@@ -257,7 +255,7 @@
     "# intermediate variables\n",
     "Sf = (2 * pi - (thetlg - thettg)) / ((1 - dr) * 2 * pi)\n",
     "Ss = (thetlg - thettg) / (dr * 2 * pi)\n",
-    "thettg_in = tranop(thettg - dr * 2 * pi) + 2*pi\n",
+    "thettg_in = tranop(thettg - dr * 2 * pi) + 2*pi # this value needs to be in the interval [-pi, pi], thus add 2pi\n",
     "\n",
     "def dp(idx):\n",
     "    phasediff = 2 * pi * f\n",
@@ -303,8 +301,6 @@
     "plt.plot(time, n2)\n",
     "plt.plot(time, n3)\n",
     "plt.plot(time, n4)\n",
-    "\n",
-    "plt.ylabel('some numbers')\n",
     "plt.show()"
    ]
   },
@@ -317,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +331,7 @@
    ],
    "source": [
     "import math\n",
-    "from math import pi, sin\n",
+    "from math import pi, sin, cos, floor\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -361,7 +357,7 @@
     "\n",
     "def tranop(x):\n",
     "    if x > pi:\n",
-    "        if (math.floor(x/pi) % 2 == 1):\n",
+    "        if (floor(x/pi) % 2 == 1):\n",
     "            t = (x % (2*pi)) - 2*pi\n",
     "        else:\n",
     "            t = (x % (2*pi))\n",
@@ -399,7 +395,7 @@
     "    act = []\n",
     "    for i in range(5):\n",
     "        if i == 4:\n",
-    "            act.append(amp * math.cos(phase[i]) + offset)\n",
+    "            act.append(amp * cos(phase[i]) + offset)\n",
     "        elif tranop(phase[i]) <= thettg:\n",
     "            act.append(thettg + (tranop(phase[i]) - thettg) * Sf)\n",
     "        elif tranop(phase[i]) <= thettg_in:\n",
@@ -432,10 +428,15 @@
     "plt.plot(time, n3)\n",
     "plt.plot(time, n4)\n",
     "plt.plot(time, n5)\n",
-    "\n",
-    "plt.ylabel('some numbers')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
